✨ (index.html, main.js): add id attribute to h1 element for easier DOM manipulation ✨ (main.js): update h1 element text content to "Hola mundo" for localization purposes

--- a/js/index.html
+++ b/js/index.html
@@ -7,6 +7,6 @@
     <script src="./js/main.js"></script>
   </head>
   <body>
-    <h1>Hello JavaScript</h1>
+    <h1 id="titulo">Hello JavaScript</h1>
   </body>
 </html>
