✨ (index.html, dom.js, lab-module-2.js, main.js): añadir nuevos scripts y actualizar el HTML ♻️ (index.html, main.js): refactorizar el código para mejorar la estructura y legibilidad

--- a/js/index.html
+++ b/js/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS bases</title>
-    <script src="./js/main.js"></script>
+    <title>JS DOM</title>
+    <!-- <script src="./js/main.js"></script> -->
+    <!-- <script src="./js/dom.js"></script> -->
+    <script src="./js/lab-module-2.js"></script>
   </head>
   <body>
     <h1 id="titulo">Hello JavaScript</h1>
+
+    <div>
+      <h2>Título dentro de div</h2>
+      <p class="class-p">Parrafo 1 dentro de div</p>
+      <p class="class-p">Parrafo 2 dentro de div</p>
+      éste es mi div 1
+      <input type="text" name="input-value" value="Mateo" />
+    </div>
   </body>
 </html>
