✨ (index.html, lab-module-2.js): añadir botón y manejar eventos en JavaScript 📝 (lab-module-2.js): actualizar documentación para reflejar nuevas funcionalidades

--- a/js/index.html
+++ b/js/index.html
@@ -11,12 +11,13 @@
   <body>
     <h1 id="titulo">Hello JavaScript</h1>
 
-    <div>
+    <div id="div-1">
       <h2>Título dentro de div</h2>
       <p class="class-p">Parrafo 1 dentro de div</p>
       <p class="class-p">Parrafo 2 dentro de div</p>
       éste es mi div 1
       <input type="text" name="input-value" value="Mateo" />
+      <button id="btn-alert">Click me</button>
     </div>
   </body>
 </html>
